Navegar da lista de pessoa para edição de pessoa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         
         <provider
             android:authorities="ipg.primeiro.projetofinalcovid"
-            android:name=".CotentProviderPessoas"
+            android:name=".ContentProviderPessoas"
             android:exported="false"/>
     </application>
 
