--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetoFinalCovid">
+        <activity android:name=".DistritoMainActivity2"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,11 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <provider
-            android:authorities="ipg.primeiro.projetofinalcovid"
             android:name=".ContentProviderPessoas"
-            android:exported="false"/>
+            android:authorities="ipg.primeiro.projetofinalcovid"
+            android:exported="false" />
     </application>
 
 </manifest>
